Update user guide

--- a/Docs/UserGuide/conventions.tex
+++ b/Docs/UserGuide/conventions.tex
@@ -444,6 +444,8 @@ structure of this node is shown in Listing \ref{lst:xccy_basis_conventions}.
   <FlatIndex> </FlatIndex>
   <SpreadIndex> </SpreadIndex>
   <EOM> </EOM>
+  <IsMtmResettable> </IsMtmResettable>
+  <FlatIsResettableLeg> </FlatIsResettableLeg>>
 </CrossCurrencyBasis>
 \end{minted}
 \caption{Cross currency basis swap conventions}
@@ -459,8 +461,9 @@ SettlementDays above.
 \item RollConvention: The roll convention for both legs.
 \item FlatIndex: The name of the index on the leg that does not have the cross currency basis spread.
 \item SpreadIndex: The name of the index on the leg that has the cross currency basis spread.
-\item EOM [Optional]: \emph{True} if the end of month convention is to be used when generating the schedule on both legs
-and \emph{False} if not. If not provided, it defaults to \emph{False}.
+\item EOM [Optional]: \emph{True} if the end of month convention is to be used when generating the schedule on both legs, and \emph{False} if not. If not provided, it defaults to \emph{False}.
+\item IsMtmResettable [Optional]: \emph{True} if the swap is a mark-to-market resetting, and \emph{False} otherwise. If not provided, it defaults to \emph{False}.
+\item FlatIsResettableLeg [Optional]: \emph{True} if it is the flat leg that resets, and \emph{False} otherwise. If not provided, it defaults to \emph{True}.
 \end{itemize}
 
 %- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
