--- a/Docs/UserGuide/userguide.tex
+++ b/Docs/UserGuide/userguide.tex
@@ -899,7 +899,7 @@ It is instructive to look into the input folder in Examples/Example\_1, the cont
 
 This simple example is an important test case which is also run similarly in one of the unit test suites of ORE. The
 expected exposure can be seen as a European option on the underlying netting set, see also appendix
-\ref{sec:app_exposure}. In this exampl«e, the expected exposure at some future point in time, say 10 years, is equal to
+\ref{sec:app_exposure}. In this example, the expected exposure at some future point in time, say 10 years, is equal to
 the European Swaption price for an option with expiry in 10 years, underlying Swap start in 10 years and underlying Swap
 maturity in 20 years. We can easily compute such standard European Swaption prices for all future points in time where
 both Swap legs reset, i.e. annually in this case\footnote{Using closed form expressions for standard European Swaption
