--- a/Docs/UserGuide/tradedata/capfloor.tex
+++ b/Docs/UserGuide/tradedata/capfloor.tex
@@ -19,7 +19,7 @@ elements, or both.
      ...
   </LegData>
   <Caps>
-    <Rate>0.05</Rate>
+    <Cap>0.05</Cap>
   </Caps>
 </CapFloorData>
 \end{minted}
@@ -36,7 +36,7 @@ The meanings and allowable values of the elements in the \lstinline!CapFloorData
 \item LegData: This is a trade component sub-node outlined in section \ref{ss:leg_data}. Exactly
   one \lstinline!LegData! node is allowed and the LegType element must be set to \emph{Floating} or \emph{CMS}.
 
-\item Caps: This node has child elements of type \lstinline!Rate!
+\item Caps: This node has child elements of type \lstinline!Cap!
   capping the floating leg. The first rate value corresponds to the
   first coupon, the second rate value corresponds to the second
   coupon, etc. If the number of coupons exceeds the number of rate
@@ -45,11 +45,11 @@ The meanings and allowable values of the elements in the \lstinline!CapFloorData
   one single rate value is sufficient. The number of entered rate
   values cannot exceed the number of coupons. 
 
-  Allowable values for each \lstinline!Rate! element: Any real number. The rate is expressed in decimal form, eg 0.05 is
+  Allowable values for each \lstinline!Cap! element: Any real number. The rate is expressed in decimal form, eg 0.05 is
   a rate of 5\%
 
 \item Floors: This node has child elements of type
-  \lstinline!Rate! flooring the floating leg.  The first rate value
+  \lstinline!Floor! flooring the floating leg.  The first rate value
   corresponds to the first coupon, the second rate value corresponds
   to the second coupon, etc. If the number of coupons exceeds the
   number of rate values, the rate will be kept flat at the value of
@@ -57,7 +57,7 @@ The meanings and allowable values of the elements in the \lstinline!CapFloorData
   over all coupons, one single rate value is sufficient. The number of
   entered rate values cannot exceed the number of coupons.
 
-  Allowable values for each \lstinline!Rate! element: Any real number. The rate is expressed in decimal form, eg 0.05 is
+  Allowable values for each \lstinline!Floor! element: Any real number. The rate is expressed in decimal form, eg 0.05 is
   a rate of 5\%
 
 \end{itemize}
