--- a/Docs/UserGuide/marketdata.tex
+++ b/Docs/UserGuide/marketdata.tex
@@ -1092,6 +1092,34 @@ Examples:
 	\item BOND/YIELD\_SPREAD/SECURITY\_1
 \end{itemize}
 
+%- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+\subsection{Correlations}
+%- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+
+\begin{table}[H]
+\centering
+  \begin{tabular}{|p{3cm}|p{3.5cm}|p{7cm}|}
+  \hline
+  {\bf Property} & {\bf Allowable values} & {\bf Description} \\ \hline
+    Instrument Type & \emph{Correlation} & \\ \hline
+    Quote Type & \emph{RATE or PRICE} & \\ \hline
+    Index1 & String & Identifying name of the first index \\ \hline
+    Index2 & String & Identifying name of the second index \\ \hline
+  \end{tabular}
+  \caption{Correlation quotes}
+  \label{tab:correlation_quote}
+\end{table}
+
+This quote either provides the correlation between two indices, in which case Quote Type is RATE,
+or a premium that can be used to bootstrap the correlations, in which case Quote Type is Price.
+Currently only CMS Spread correlations are supported, in this case the Price quote is the price of a CMS Spread Cap.
+
+\medskip
+Examples:
+\begin{itemize}
+	\item BOND/YIELD\_SPREAD/SECURITY\_1
+\end{itemize}
+
 % %- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 % \subsection{Year-on-Year Inflation Cap/Floor Volatility} \label{ss:yoy_inflation_vol}
 % %- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
