--- a/Docs/UserGuide/tradecomponents.tex
+++ b/Docs/UserGuide/tradecomponents.tex
@@ -192,7 +192,7 @@ The meanings and allowable values of the elements in the \lstinline!LegData! nod
 \item LegType:  Determines which of the available sub-nodes must be
   used. 
 
-Allowable values:  \emph{Fixed, Floating, Cashflow, CMS, CMSSpread, Equity, YY, CPI}
+Allowable values:  \emph{Fixed, Floating, Cashflow, CMS, CMSSpread, DigitalCMSSpread, Equity, YY, CPI}
 
 \item Payer:  The flows of the leg are paid to the counterparty if
   \emph{true}, and received if \emph{false}.  
@@ -341,6 +341,8 @@ outlined in section \ref{ss:floatingleg_data} Floating Leg Data and Spreads.
   outlined in section \ref{ss:cmslegdata}.
 \item CMSSpreadLegData: This trade component sub-node is required if \lstinline!LegType! is set to \emph{CMSSpread}. It is
   outlined in section \ref{ss:cmsspreadlegdata}.
+\item DigitalCMSSpreadLegData: This trade component sub-node is required if \lstinline!LegType! is set to \emph{DigitalCMSSpread}. It is
+  outlined in section \ref{ss:digitalcmsspreadlegdata}.
 \item CPILegData: This trade component sub-node is required if \lstinline!LegType! is set to \emph{CPI}. It is
   outlined in section \ref{ss:cpilegdata}.
 \item YYLegData: This trade component sub-node is required if \lstinline!LegType! is set to \emph{YY}. It is
@@ -845,6 +847,77 @@ Listing \ref{lst:cmsspreadlegdata} shows an example for a leg of type CMSSpread.
 
 The elements of the CMSSpreadLegData block are identical to those of the CMSLegData (see \ref{ss:cmslegdata}), except
 for the index which is defined by two CMS indices as the difference between \verb+Index1+ and \verb+Index2+.
+
+\subsubsection{Digital CMS Spread Leg Data}
+\label{ss:cmsspreadlegdata}
+
+Listing \ref{lst:digitalcmsspreadlegdata} shows an example for a leg of type DigitalCMSSpread.
+
+\begin{listing}[H]
+%\hrule\medskip
+\begin{minted}[fontsize=\footnotesize]{xml}
+      <LegData>
+        <LegType>DigitalCMSSpread</LegType>
+        <Payer>false</Payer>
+        <Currency>GBP</Currency>
+        <Notionals>
+          <Notional>10000000</Notional>
+        </Notionals>
+        <DayCounter>ACT/ACT</DayCounter>
+        <PaymentConvention>Following</PaymentConvention>
+        <ScheduleData>
+          ...
+        </ScheduleData>
+        <DigitalCMSSpreadLegData>
+            <CMSSpreadLegData>
+              <Index1>EUR-CMS-10Y</Index1>
+              <Index2>EUR-CMS-2Y</Index2>
+              <Spreads>
+                <Spread>0.0010</Spread>
+              </Spreads>
+              <Gearings>
+                <Gearing>8.0</Gearing>
+              </Gearings>
+              <NakedOption>N</NakedOption>
+            </CMSSpreadLegData>
+            <CallPosition>Long</CallPosition>
+            <IsCallATMIncluded>false</IsCallATMIncluded>
+            <CallStrikes>
+                <Strike>0.0001</Strike>
+            </CallStrikes>
+            <CallPayoffs>
+                <Payoff>0.0001</Payoff>
+            </CallPayoffs>
+            <PutPosition>Long</PutPosition>
+            <IsPutATMIncluded>false</IsPutATMIncluded>
+            <PutStrikes>
+                <Strike>0.001</Strike>
+            </PutStrikes>
+            <PutPayoffs>
+                <Payoff>0.001</Payoff>
+            </PutPayoffs>
+        </DigitalCMSSpreadLegData>
+      </LegData>
+\end{minted}
+\caption{Digital CMS Spread leg data}
+\label{lst:cmsspreadlegdata}
+\end{listing}
+
+The DigitalCMSLegData block contains the following elements:
+
+\begin{itemize}
+\item CMSLegData: a CMSSpreadLegData block describing the underlying cms spread leg (see \ref{ss:cmsspreadlegdata}.
+\item CallPosition: Specifies whether the call option position is long  or
+  short.
+\item IsCallATMIncluded: inclusion flag on the call payoff if the call option ends at-the-money
+\item CallStrikes: strike rate for the the call option
+\item CallPayoffs: digital call option payoff rate. If included the option is cash-or-nothing, if excluded the option is asset-or-nothing
+\item PutPosition: Specifies whether the put option position is long  or short.
+\item IsPutATMIncluded: inclusion flag on the put payoff if the put option ends at-the-money
+\item PutStrikes: strike rate for the the put option
+\item PutPayoffs: digital put option payoff rate. If included the option is cash-or-nothing, if excluded the option is asset-or-nothing
+\end{itemize}
+
 
 \subsubsection{Equity Leg Data}
 \label{ss:equitylegdata}
