our and their KVA, PD bug fix, PD floor configurable

--- a/Docs/UserGuide/userguide.tex
+++ b/Docs/UserGuide/userguide.tex
@@ -75,9 +75,14 @@
 \newcommand{\EE}{\mathit{EE}}
 \newcommand{\EPE}{\mathit{EPE}}
 \newcommand{\ENE}{\mathit{ENE}}
+\newcommand{\EEPE}{\mathit{EEPE}}
+\newcommand{\EEE}{\mathit{EEE}}
+\newcommand{\EAD}{\mathit{EAD}}
+\newcommand{\RC}{\mathit{RC}}
 \newcommand{\PD}{\mathit{PD}}
 \newcommand{\LGD}{\mathit{LGD}}
 \newcommand{\DIM}{\mathit{DIM}}
+\newcommand{\MA}{\mathit{MA}}
 \newcommand{\bs}{\textbackslash}
 \newcommand{\REDY}{\color{red}Y}
  
@@ -105,7 +110,8 @@ Date & Author & Comment \\
 7 October 2016 & Quaternion & initial release\\
 28 April 2017 & Quaternion  & updates for release 2\\
 7 December 2017 & Quaternion & updates for release 3\\
-13 June 2018 & Quaternion & updates for release 4\\
+%13 June 2018 & Quaternion & updates for release 4\\
+21 February 2018 & Quaternion & updates for release 4\\
 \hline
 \end{supertabular}
 \end{center}
@@ -2099,6 +2105,8 @@ details and analyse their impact on XVAs quickly without re-generating the NPV c
     <Parameter name="kvaAlpha">1.4</Parameter>
     <Parameter name="kvaRegAdjustment">12.5</Parameter>
     <Parameter name="kvaCapitalHurdle">0.012</Parameter>
+    <Parameter name="kvaOurPdFloor">0.03</Parameter>
+    <Parameter name="kvaTheirPdFloor">0.03</Parameter>
     <Parameter name="dim">Y</Parameter>
     <Parameter name="mva">Y</Parameter>
     <Parameter name="dimQuantile">0.99</Parameter>
@@ -2154,7 +2162,7 @@ collateral rates floor to the collateral model file (netting.xml)}
 %collateral rate. 
 %basis point is 0.0001) assuming the day count convention of the collateral rate.
 \item {\tt kva:} Flag to enable setting the kva ccr parameters.
-\item {\tt kvaCapitalDiscountRate, kvaAlpha, kvaRegAdjustment, kvaCapitalHurdle:} the kva ccr parameters (see \ref{sec:app_kva}.
+\item {\tt kvaCapitalDiscountRate, kvaAlpha, kvaRegAdjustment, kvaCapitalHurdle, kvaOurPdFloor, kvaTheirPdFloor:} the kva CCR parameters (see \ref{sec:app_kva}.
 \item {\tt dimQuantile:} Quantile for Dynamic Initial Margin (DIM) calculation
 \item {\tt dimHorizonCalendarDays:} Horizon for DIM calculation, 14 calendar days for 2 weeks, etc.
 \item {\tt dimRegressionOrder:} Order of the regression polynomial (netting set clean NPV move over the simulation
@@ -4804,41 +4812,49 @@ the risk  weight and a capital charge (following the RWA method).
 \medskip Basel II internal rating based (IRB) estimate of worst case
 probability of  default: large homogeneous pool (LHP) approximation of
 Vasicek (1997), KVA regulatory probability of default is the worst
-case  probability of default floored at 0.03:
+case probability of default floored at 0.03 (the latter is valid for 
+corporates and banks, no such floor applies to sovereign counterparties):
 $$
-PD_{99.9\%} = \max(0.03, N (\frac{N^{-1}(PD) + \sqrt{\rho}
-  N^{-1}(0.999)}{\sqrt{1 - \rho}}) - PD)
+\PD_{99.9\%} = \max\left(floor, N \left(\frac{N^{-1}(\PD) + \sqrt{\rho}
+  N^{-1}(0.999)}{\sqrt{1 - \rho}}\right) - \PD\right)
 $$
 $N$ is the cumulative standard normal distribution,
 
 $$
-\rho = 0.12 \frac{1 - e^{-50 PD}}{1 - e^{-50}} + 0.24 (1 - \frac{1 -
-  e^{-50 PD}}{1 - e^{-50}})
+\rho = 0.12 \frac{1 - e^{-50 \PD}}{1 - e^{-50}} + 0.24 \left(1 - \frac{1 -
+  e^{-50 \PD}}{1 - e^{-50}}\right)
 $$
 
 \medskip Maturity adjustment factor for RWA method capped at 5, floored at 1:
-$$MA(PD, M) = \min(5, \max(1, \frac{1 + (M - 2.5) B(PD)}{1 - 1.5 B(PD)}))$$
-\medskip where $B(PD) = (0.11852 - 0.05478 \ln(PD))^2$ and M is the
+$$
+\MA(\PD, M) = \min\left(5, \max\left(1, \frac{1 + (M - 2.5) B(\PD)}{1 - 1.5 B(\PD)}\right)\right)
+$$
+\medskip where $B(\PD) = (0.11852 - 0.05478 \ln(\PD))^2$ and M is the
 effective  maturity of the portfolio (capped at 5):
 
-$$M = \min(5, 1 + \frac{\sum\limits_{t_k > 1yr} EE(t_k)\Delta t_k
-  B(0,t_k)}{\sum\limits_{t_k \leq 1yr} EEE(t_k)\Delta t_k B(0,t_k)})$$
+$$M = \min\left(5, 1 + \frac{\sum\limits_{t_k > 1yr} \EE(t_k)\Delta t_k
+  B(0,t_k)}{\sum\limits_{t_k \leq 1yr} \EEE(t_k)\Delta t_k B(0,t_k)}\right)
+$$
 
 \medskip where $B(0,t_k)$ is the risk-free discount factor from the
 simulation  date $t_k$ to today, $\Delta t_k$ is the difference
 between time points, 
-$EE(t_k)$ is the expected exposure at time $t_k$ and $EEE(t_k)$ is the
+$\EE(t_k)$ is the expected exposure at time $t_k$ and $\EEE(t_k)$ is the
 effective expected exposure.
 
 \medskip (expected) risk capital at $t_i$:
-$$RC_{t_i} = EAD_{t_i} \times LGD \times PD_{99.9\%} \times MA(PD, M)$$
+$$\RC_{t_i} = EAD_{t_i} \times LGD \times \PD_{99.9\%} \times \MA(\PD, M)$$
 
-$$EAD_{t_i} = \alpha \times EEPE_{t_i}$$
+$$\EAD_{t_i} = \alpha \times \EEPE_{t_i}$$
 
-\medskip $EEPE_{t_i}$ being approximated by $EPE$ at point $t_i$ and $\alpha$ the multiplier resulting from the IRB calculations (Basel II defines a supervisory alpha of 1.4, but gives banks the option to estimate their own $\alpha$,subject to a floor of 1.2).
+\medskip $\EEPE_{t_i}$ being approximated by $\EPE$ at point $t_i$ and $\alpha$ the multiplier resulting from the IRB calculations (Basel II defines a supervisory alpha of 1.4, but gives banks the option to estimate their own $\alpha$,subject to a floor of 1.2).
 
-\medskip $KVA_{CCR}$ is the sum of the expected risk capitals discounted at capital discount rate and factored with the capital hurdle and the regulatory adjustment:
-$$KVA_{CCR} = \sum_i RC_{t_i} \frac{1}{ (1 + capDiscRate)^{t_i-t_0}} (t_i - t_{i-1}) \times (capHurdle \times regAdj)$$
+\medskip $\KVA_{CCR}$ is the sum of the expected risk capitals discounted at capital discount rate and factored with the capital hurdle and the regulatory adjustment:
+$$
+\KVA_{CCR} = \sum_i \RC_{t_i} \frac{1}{ (1 + capDiscRate)^{t_i-t_0}} (t_i - t_{i-1}) \times (capHurdle \times regAdj)
+$$
+
+In ORE we compute KVA CCR from both perspectives - ``our'' KVA driven by EPE and the counterparty default risk, and similarly ``their'' KVA driven by ENE and our default risk.
 
 \subsection{Collateral Model}\label{sec:app_collateral}
 
