--- a/Docs/UserGuide/userguide.tex
+++ b/Docs/UserGuide/userguide.tex
@@ -79,10 +79,14 @@
 \newcommand{\EEE}{\mathit{EEE}}
 \newcommand{\EAD}{\mathit{EAD}}
 \newcommand{\RC}{\mathit{RC}}
+\newcommand{\RW}{\mathit{RW}}
+\newcommand{\NS}{\mathit{NS}}
 \newcommand{\PD}{\mathit{PD}}
 \newcommand{\LGD}{\mathit{LGD}}
 \newcommand{\DIM}{\mathit{DIM}}
+\newcommand{\DF}{\mathit{DF}}
 \newcommand{\MA}{\mathit{MA}}
+\newcommand{\SCVA}{\mathit{SCVA}}
 \newcommand{\bs}{\textbackslash}
 \newcommand{\REDY}{\color{red}Y}
  
@@ -2107,6 +2111,8 @@ details and analyse their impact on XVAs quickly without re-generating the NPV c
     <Parameter name="kvaCapitalHurdle">0.012</Parameter>
     <Parameter name="kvaOurPdFloor">0.03</Parameter>
     <Parameter name="kvaTheirPdFloor">0.03</Parameter>
+    <Parameter name="kvaOurCvaRiskWeight">0.005</Parameter>
+    <Parameter name="kvaTheirCvaRiskWeight">0.05</Parameter>
     <Parameter name="dim">Y</Parameter>
     <Parameter name="mva">Y</Parameter>
     <Parameter name="dimQuantile">0.99</Parameter>
@@ -2162,7 +2168,7 @@ collateral rates floor to the collateral model file (netting.xml)}
 %collateral rate. 
 %basis point is 0.0001) assuming the day count convention of the collateral rate.
 \item {\tt kva:} Flag to enable setting the kva ccr parameters.
-\item {\tt kvaCapitalDiscountRate, kvaAlpha, kvaRegAdjustment, kvaCapitalHurdle, kvaOurPdFloor, kvaTheirPdFloor:} the kva CCR parameters (see \ref{sec:app_kva}.
+\item {\tt kvaCapitalDiscountRate, kvaAlpha, kvaRegAdjustment, kvaCapitalHurdle, kvaOurPdFloor, kvaTheirPdFloor kvaOurCvaRiskWeight, kvaTheirCvaRiskWeight:} the kva CCR parameters (see \ref{sec:app_kva} and \ref{sec:app_kva_cva}.
 \item {\tt dimQuantile:} Quantile for Dynamic Initial Margin (DIM) calculation
 \item {\tt dimHorizonCalendarDays:} Horizon for DIM calculation, 14 calendar days for 2 weeks, etc.
 \item {\tt dimRegressionOrder:} Order of the regression polynomial (netting set clean NPV move over the simulation
@@ -4842,19 +4848,54 @@ between time points,
 $\EE(t_k)$ is the expected exposure at time $t_k$ and $\EEE(t_k)$ is the
 effective expected exposure.
 
-\medskip (expected) risk capital at $t_i$:
-$$\RC_{t_i} = EAD_{t_i} \times LGD \times \PD_{99.9\%} \times \MA(\PD, M)$$
+\medskip (Expected) risk capital at $t_i$:
+$$\RC(t_i) = EAD(t_i) \times LGD \times \PD_{99.9\%} \times \MA(\PD, M)$$
 
-$$\EAD_{t_i} = \alpha \times \EEPE_{t_i}$$
+$$\EAD(t_i) = \alpha \times \EEPE(t_i)$$
 
-\medskip $\EEPE_{t_i}$ being approximated by $\EPE$ at point $t_i$ and $\alpha$ the multiplier resulting from the IRB calculations (Basel II defines a supervisory alpha of 1.4, but gives banks the option to estimate their own $\alpha$,subject to a floor of 1.2).
+\medskip $\EEPE_{t_i}$ being approximated by %$\EPE$ at point $t_i$ 
+the maximum of $\EPE(t)$ with $t\geq t_i$,
+and $\alpha$ the multiplier resulting from the IRB calculations (Basel II defines a supervisory alpha of 1.4, but gives banks the option to estimate their own $\alpha$,subject to a floor of 1.2).
 
-\medskip $\KVA_{CCR}$ is the sum of the expected risk capitals discounted at capital discount rate and factored with the capital hurdle and the regulatory adjustment:
+\medskip $\KVA_{CCR}$ is the sum of the expected risk capital amount discounted at {\em capital discount rate} $r_{cd}$ and compounded at rate given by the product of {\em capital hurdle} $h$ and {\em regulatory adjustment} $a$:
 $$
-\KVA_{CCR} = \sum_i \RC_{t_i} \frac{1}{ (1 + capDiscRate)^{t_i-t_0}} (t_i - t_{i-1}) \times (capHurdle \times regAdj)
+\KVA_{CCR} = \sum_i \RC_{t_i} \times \frac{1}{ (1 + r_{cd})^{\delta(t_{i-1}, t_i)}} \times \delta(t_{i-1}, t_i) \times h \times a
 $$
+assuming Actual/Actual day count to compute the year factions $delta$.
 
 In ORE we compute KVA CCR from both perspectives - ``our'' KVA driven by EPE and the counterparty default risk, and similarly ``their'' KVA driven by ENE and our default risk.
+
+\subsection{KVA (BA-CVA)}\label{sec:app_kva_cva}
+
+This section briefly summarizes the calculation of a capital value adjustment associated with the CVA capital charge (in the basic approach, BA-CVA) as introduced in Basel III \cite{bcbs189}. ORE implements the {\em stand-alone} capital charge $\SCVA$ for a netting set and computes a KVA for it\footnote{In the reduced version of BA-CVA, where hedges are not recognized, the total BA-CVA capital charge across all counterparties $c$ is given by
+$$
+K = \sqrt{\left(\rho \sum_c \SCVA_c\right)^2 +(1-\rho^2)\sum_c \SCVA_c^2}
+$$  
+with supervisory correlation $\rho=0.5$ to reflect that the credit spread risk factors across counterparties are not perfectly correlated. Each counterparty $\SCVA_c$ is given by a sum over all netting sets with this counterparty.}. In the basic approach, the stand-alone capital charge for a netting set is given by
+$$
+\SCVA = \RW_c\cdot M\cdot \EEPE \cdot\DF
+$$
+with 
+\begin{itemize}
+\item supervisory risk weight $\RW_c$ for the counterparty;
+\item effective netting set maturity $M$ as in section \ref{sec:app_kva} (for a bank using IMM to calculate EAD), but without applying a cap of 5;
+\item supervisory discount $\DF$ for the netting set which is equal to one for banks using IMM to calculate $\EEPE$ and $\DF=\left(1-\exp\left(-0.05\,M\right)\right)/(0.05\,M)$ for banks not using IMM to calculate $\EEPE$. 
+\end{itemize}
+
+The associated capital value adjustment is then computed for each netting set's stand-alone CVA charge as above
+$$
+\KVA_{BA-\CVA} = \sum_i \SCVA(t_i) \times \frac{1}{ (1 + r_{cd})^{\delta(t_{i-1}, t_i)}} \times \delta(t_{i-1}, t_i) \times h \times a
+$$
+with 
+$$
+\SCVA(t_i) = \RW_c \cdot M\cdot \EEPE(t_i)\cdot\DF
+$$
+where we keep $M$ and $\DF$ constant as of today ($t=0$), and $\EEPE(t_i)$ is approximated by 
+the maximum of $\EPE(t)$ with $t\geq t_i$.
+
+In ORE we compute KVA BA-CVA from both perspectives - ``our'' KVA driven by EPE and the counterparty risk weight, and similarly ``their'' KVA driven by ENE and our risk weight. \\
+
+Note: Banks that use the BA-CVA for calculating CVA capital requirements are allowed to cap the maturity adjustment factor $\MA(\PD,M)$ in section \ref{sec:app_kva} at 1 for netting sets that contribute to CVA capital, if using the IRB approach for CCR capital.
 
 \subsection{Collateral Model}\label{sec:app_collateral}
 
