--- a/Docs/UserGuide/tradecomponents.tex
+++ b/Docs/UserGuide/tradecomponents.tex
@@ -447,11 +447,11 @@ Allowable values and descriptions: See Table \ref{tab:rule} Rule. Defaults to \e
 
 \item EndOfMonth [Optional]: Specifies whether the date generation rule is different for end of month. 
 
-Allowable values: \emph{True, False}. Defaults to \emph{False} if left blank or omitted
+Allowable values: \emph{True, False}. Defaults to \emph{False} if left blank or omitted. Must be set to \emph{False} or omitted if the date generation Rule is set to \emph{CDS} or \emph{CDS2015}.
 
 \item FirstDate [Optional]: Date for initial stub period.
 
-Allowable values: See \lstinline!Date! in Table \ref{tab:allow_stand_data}.
+Allowable values: See \lstinline!Date! in Table \ref{tab:allow_stand_data}. Incompatible with date generation Rule  \emph{CDS} and \emph{CDS2015}.
 
 \item LastDate [Optional]: Date for final stub period.
 
@@ -483,9 +483,9 @@ Allowable values: See \lstinline!Date! in Table \ref{tab:allow_stand_data}.
                           third Wednesday of their month (with forward calculation.) \\ \hline
 \emph{Twentieth}   &   All dates but the effective date are taken to be the twentieth of their month (used for CDS schedules in emerging markets.)  The termination date is also modified. \\ \hline
 \emph{TwentiethIMM}   &   All dates but the effective date are  taken to be the twentieth of an IMM month (used for CDS schedules.)  The termination date is also modified. \\ \hline
-\emph{OldCDS}   &   Same as TwentiethIMM with unrestricted date ends and log/short stub coupon period (old CDS convention).\\ \hline
+\emph{OldCDS}   &   Same as TwentiethIMM with unrestricted date ends and long/short stub coupon period (old CDS convention).\\ \hline
 CDS   &   Credit derivatives standard rule defined in 'Big Bang' changes in 2009.\\ \hline
-CDS2015   &   Credit derivatives standard rule updated in 2015.\\ \hline
+CDS2015   &   Credit derivatives standard rule updated in 2015. Bi-annual roll dates on 20th March and 20th September. \\ \hline
 \end{tabular}
   \caption{Allowable Values for Rule}
   \label{tab:rule}
