--- a/Docs/UserGuide/tradecomponents.tex
+++ b/Docs/UserGuide/tradecomponents.tex
@@ -343,6 +343,8 @@ outlined in section \ref{ss:floatingleg_data} Floating Leg Data and Spreads.
   outlined in section \ref{ss:cmsspreadlegdata}.
 \item DigitalCMSSpreadLegData: This trade component sub-node is required if \lstinline!LegType! is set to \emph{DigitalCMSSpread}. It is
   outlined in section \ref{ss:digitalcmsspreadlegdata}.
+\item EquityLegData: This trade component sub-node is required if \lstinline!LegType! is set to \emph{Equity}. It is
+  outlined in section \ref{ss:equitylegdata}.    
 \item CPILegData: This trade component sub-node is required if \lstinline!LegType! is set to \emph{CPI}. It is
   outlined in section \ref{ss:cpilegdata}.
 \item YYLegData: This trade component sub-node is required if \lstinline!LegType! is set to \emph{YY}. It is
@@ -435,7 +437,7 @@ Allowable values: See Table \ref{tab:calendar} Calendar.
 Allowable values: See \lstinline!Roll Convention! in Table
 \ref{tab:allow_stand_data}.
 
-\item TermConvention: Determines the adjustment of the final schedule
+\item TermConvention [Optional]: Determines the adjustment of the final schedule
   date with regards to the selected calendar. 
 
 Allowable values: See \lstinline!Roll Convention! in Table \ref{tab:allow_stand_data}.
@@ -484,8 +486,8 @@ Allowable values: See \lstinline!Date! in Table \ref{tab:allow_stand_data}.
 \emph{Twentieth}   &   All dates but the effective date are taken to be the twentieth of their month (used for CDS schedules in emerging markets.)  The termination date is also modified. \\ \hline
 \emph{TwentiethIMM}   &   All dates but the effective date are  taken to be the twentieth of an IMM month (used for CDS schedules.)  The termination date is also modified. \\ \hline
 \emph{OldCDS}   &   Same as TwentiethIMM with unrestricted date ends and long/short stub coupon period (old CDS convention).\\ \hline
-CDS   &   Credit derivatives standard rule defined in 'Big Bang' changes in 2009.\\ \hline
-CDS2015   &   Credit derivatives standard rule updated in 2015. Bi-annual roll dates on 20th March and 20th September. \\ \hline
+CDS   &   Credit derivatives standard rule defined in 'Big Bang' changes in 2009. \\ \hline
+CDS2015   &   Credit derivatives standard rule updated in 2015. Same as  \emph{CDS} but with termination dates adjusted to 20th June and 20th December. \\ \hline
 \end{tabular}
   \caption{Allowable Values for Rule}
   \label{tab:rule}
@@ -849,7 +851,7 @@ The elements of the CMSSpreadLegData block are identical to those of the CMSLegD
 for the index which is defined by two CMS indices as the difference between \verb+Index1+ and \verb+Index2+.
 
 \subsubsection{Digital CMS Spread Leg Data}
-\label{ss:cmsspreadlegdata}
+\label{ss:digitalcmsspreadlegdata}
 
 Listing \ref{lst:digitalcmsspreadlegdata} shows an example for a leg of type DigitalCMSSpread.
 
@@ -900,13 +902,13 @@ Listing \ref{lst:digitalcmsspreadlegdata} shows an example for a leg of type Dig
       </LegData>
 \end{minted}
 \caption{Digital CMS Spread leg data}
-\label{lst:cmsspreadlegdata}
+\label{lst:digitalcmsspreadlegdata}
 \end{listing}
 
 The DigitalCMSLegData block contains the following elements:
 
 \begin{itemize}
-\item CMSLegData: a CMSSpreadLegData block describing the underlying cms spread leg (see \ref{ss:cmsspreadlegdata}.
+\item DigitalCMSLegData: a DigitalCMSSpreadLegData block describing the underlying digital cms spread leg (see \ref{ss:digitalcmsspreadlegdata}.
 \item CallPosition: Specifies whether the call option position is long  or
   short.
 \item IsCallATMIncluded: inclusion flag on the call payoff if the call option ends at-the-money
