--- a/Docs/UserGuide/userguide.tex
+++ b/Docs/UserGuide/userguide.tex
@@ -89,7 +89,8 @@
 %\date{7 October 2016}
 %\date{28 April 2017}
 %\date{7 December 2017}
-\date{13 June 2018}
+%\date{13 June 2018}
+\date{20 March 2018}
 \maketitle
 
 \newpage
@@ -105,7 +106,7 @@ Date & Author & Comment \\
 7 October 2016 & Quaternion & initial release\\
 28 April 2017 & Quaternion  & updates for release 2\\
 7 December 2017 & Quaternion & updates for release 3\\
-13 June 2018 & Quaternion & updates for release 4\\
+20 March 2019 & Quaternion & updates for release 4\\
 \hline
 \end{supertabular}
 \end{center}
@@ -183,7 +184,7 @@ Subsequent ORE releases will also compute {\bf regulatory capital charges} for c
 %releases from Q1 2017 onwards will extend the derivative product and the risk factor range to Inflation, Credit, Equity
 %and Commodity. With the introduction of credit risk factors, the scope will also be extended to cover cash products
 %(loans and bonds) and related portfolio analytics.
-The product coverage of the third release of ORE in December 2017 is sketched in the following table.
+The product coverage of the fourth release of ORE in March 2018 is sketched in the following table.
 \begin{table}[hbt]
 \scriptsize
 \begin{center}
@@ -211,6 +212,10 @@ Equity Forwards & Y & Y & Y & Y\\
 \hline
 Equity Options & Y & Y & Y & Y \\
 \hline
+Commodity Forwards & Y & Y & N & N\\
+\hline
+Commodity Options & Y & Y & N & N \\
+\hline
 CPI Swaps & Y & Y & N & Y \\
 \hline
 %CPI Caps/Floors & Y & Y & N \\
@@ -221,6 +226,7 @@ Year-on-Year Inflation Swaps & Y & Y & N & Y \\
 %\hline
 Credit Default Swaps & Y & Y & N & N \\
 \hline
+
 \end{tabular}
 \caption{ORE product coverage.}
 \label{tab_coverage}
@@ -434,8 +440,8 @@ This will create a folder 'ore' in your current directory that contains the code
 \subsubsection{Boost}\label{sec:boost}
 
 QuantLib and ORE depend on the boost C++ libraries. Hence these need to be installed before building QuantLib and
-ORE. On all platforms we recommend boost version 1\_63 or higher.
-Older versions may work on some platforms and system configurations, but were not tested.
+ORE. On all platforms the minimum required boost version is 1\_63 as of ORE release 4.
+%Older versions may work on some platforms and system configurations, but were not tested.
 
 \subsubsection*{Windows}
 
@@ -789,6 +795,18 @@ Example & Description \\
 \hline
 23 & Forward Rate Agreement and Averaging OIS Exposure\\
 \hline
+24 & Commodity Forward and Option Pricing and Sensitivity\\
+\hline
+25 & CMS Spread with (Digital) Cap/Floor Pricing, Sensitivity and Exposures\\
+\hline
+26 & Bootstrap Consistency\\
+\hline
+27 & BMA Basis Swap Pricing and Sensitivity\\
+\hline
+28 & Discount Ratio Curves\\
+\hline
+29 & Curve Building using Fixed vs. Float Cross Currency Helpers\\
+\hline
 \end{tabular}
 \caption{ORE examples.}
 \label{tab_0}
@@ -870,7 +888,7 @@ directory {\tt bin/win32/} respectively {\tt bin/x64/}. Otherwise the examples m
 executables which come with the ORE release.
 
 %--------------------------------------------------------
-\subsection{Interest Rate Swap Exposure}\label{sec:example1}
+\subsection{Interest Rate Swap Exposure, Flat Market}\label{sec:example1}
 %--------------------------------------------------------
 
 We start with a vanilla single currency Swap (currency EUR, maturity 20y, notional 10m, receive fixed 2\% annual, pay
@@ -924,7 +942,11 @@ perspectives (EPE and ENE) match not only at the annual resets, but also for the
 legs to the point in time when the floating leg resets. Thereafter, between floating leg (only) reset and next joint
 fixed/floating leg reset, we see and expect a deviation of the two exposure profiles.
 
-\medskip Moving to {\tt Examples/Example\_2}, we see what changes when using a realistic (non-flat) market
+%--------------------------------------------------------
+\subsection{Interest Rate Swap Exposure, Realistic Market}\label{sec:example2}
+%--------------------------------------------------------
+
+Moving to {\tt Examples/Example\_2}, we see what changes when using a realistic (non-flat) market
 environment. Running the example with
 
 \medskip
@@ -1059,7 +1081,7 @@ directories {\tt Examples/Example\_7/Output/portfolio\_\#}. Note that these dire
 before running the batch with {\tt python run.py}.
 
 %--------------------------------------------------------
-\subsection{FX Forward Exposure}\label{sec:fxfwd}
+\subsection{FX Forward and FX Option Exposure}\label{sec:fxfwd}
 %--------------------------------------------------------
 
 The example in folder {\tt Examples/Example\_7} generates the exposure evolution for a EUR / USD FX Forward transaction
@@ -1077,7 +1099,7 @@ trade's value date must match corresponding Vanilla FX Option prices, as shown i
 \end{figure}
 
 %--------------------------------------------------------
-\subsection{FX Option Exposure}\label{sec:fxoption}
+\subsection*{FX Option Exposure}\label{sec:fxoption}
 %--------------------------------------------------------
 
 This example (in folder {\tt Examples/Example\_7}, as the FX Forward example) illustrates the exposure evolution for an
@@ -1104,7 +1126,7 @@ each simulation step on each path.
 %\todo[inline]{Add exposure evolution graph with 'simulated' FX vol}
 
 %--------------------------------------------------------
-\subsection{Cross Currency Swap Exposure and FX Reset}
+\subsection{Cross Currency Swap Exposure, without FX Reset}
 %--------------------------------------------------------
 
 The case in {\tt Examples/Example\_8} is a vanilla cross currency Swap. It shows the typical blend of an Interest Rate
@@ -1118,6 +1140,10 @@ figure \ref{fig_6}.
   quarterly time steps.}
 \label{fig_6}
 \end{figure}
+
+%--------------------------------------------------------
+\subsection{Cross Currency Swap Exposure, with FX Reset}
+%--------------------------------------------------------
 
 The effect of the FX resetting feature, common in Cross Currency Swaps nowadays, is shown in {\tt Examples/Example\_9}.
 The example shows the exposure evolution of a EUR/USD cross currency basis Swap with FX reset at each interest period
@@ -1133,7 +1159,7 @@ the EUR leg's notional is reset to match the USD notional.
 \end{figure}
   
 %--------------------------------------------------------
-\subsection{Netting and Collateral}
+\subsection{Netting Set, Collateral, XVAs, XVA Allocation}
 %--------------------------------------------------------
 
 In this example (see folder {\tt Examples/Example\_10}) we showcase a small netting set consisting of three Swaps in
@@ -1193,7 +1219,7 @@ from the evaluation date.
 \end{figure}
 
 %--------------------------------------------------------
-\subsection{CVA, DVA, FVA, COLVA, MVA, Collateral Floor}
+\subsection*{CVA, DVA, FVA, COLVA, MVA, Collateral Floor}
 %--------------------------------------------------------
 
 We use one of the cases in {\tt Examples/Example\_10} to demonstrate the
@@ -1228,7 +1254,7 @@ incremental contributions to these two VAs through time.
 
 
 %--------------------------------------------------------
-\subsection{Exposure Reports \& XVA Allocation to Trades}
+\subsection*{Exposure Reports \& XVA Allocation to Trades}
 %--------------------------------------------------------
 Using the example in folder {\tt Examples/Example\_10} we illustrate here the layout of an exposure report produced by
 ORE. The report shows the exposure evolution of Swap\_1 without collateral which - after running Example\_10 - is found
@@ -1566,7 +1592,7 @@ Finally, this example demonstrates a parametric VaR calculation based on the sen
 \subsection{Equity Derivatives Exposure}\label{ex:equityderivatives}
 %--------------------------------------------------------
 
-The example in folder {\tt Examples/Example\_16} demonstrates the computation of NPV, exposures and XVA for a portfolio 
+The example in folder {\tt Examples/Example\_16} demonstrates the computation of NPV, sensitivities, exposures and XVA for a portfolio 
 of OTC equity derivatives. The portfolio used in this example consists of:
 
 \begin{itemize}
@@ -1576,6 +1602,8 @@ of OTC equity derivatives. The portfolio used in this example consists of:
 	\item an equity call option denominated in USD (``SP5'')
 	\item an equity put option denominated in USD (``SP5'')
 	\item an equity forward denominated in USD (``SP5'')
+	\item an equity Swap in USD with return type  ``price'' (``SP5'')
+	\item an equity Swap in USD with return type ``total'' (``SP5'')
 \end{itemize}
 
 The step-by-step procedure for running ORE is identical for equities as for other asset classes; the same market and 
@@ -1736,6 +1764,126 @@ This example in folder {\tt Examples/Example\_23} demonstrates pricing, cash flo
 \end{itemize}
 using a minimal portfolio of four trades, one FRA and three OIS. The essential results are in {\tt npv.csv}, {\tt flows.csv} and 
 four {\tt exposure\_trade\_*.csv} files.
+
+%--------------------------------------------------------
+\subsection{Commodity Forward and Option}% Example 24
+%--------------------------------------------------------
+
+The example in folder {\tt Examples/Example\_24} demonstrates pricing and sensitivity analysis for
+\begin{itemize}
+\item Commodity Forwards
+\item European Commodity Options
+\end{itemize}
+using a minimal portfolio of four forwards and two options referencing WTI and Gold. 
+The essential results are in {\tt npv.csv} and {\tt sensitivity.csv}.
+
+%--------------------------------------------------------
+\subsection{CMS Spread with (Digital) Cap/Floor}% Example 25
+%--------------------------------------------------------
+
+The example in folder {\tt Examples/Example\_25}  demonstrates pricing, sensitivity analysis 
+and exposure simulation for 
+\begin{itemize}
+\item Capped/Floored CMS Spreads
+\item CMS Spreads with Digital Caps/Floors
+\end{itemize}
+
+The example can be run with
+
+\medskip
+\centerline{\tt python run.py}
+
+\medskip
+and results are in {\tt npv.csv}, {\tt sensitivity.csv}, {\tt exposure\_*.csv} 
+and the exposure graphs in {\tt mpl\_cmsspread.pdf}.
+
+%--------------------------------------------------------
+\subsection{Bootstrap Consistency}% Example 26
+%--------------------------------------------------------
+
+The example in folder {\tt Examples/Example\_26} confirms that bootstrapped curves 
+correctly reprice the bootstrap instruments (FRAs, Interest Rate Swaps, FX Forwards, Cross
+Currency Basis Swaps) using three pricing setups with
+\begin{itemize}
+\item EUR collateral discounting (configuration xois\_eur)
+\item USD collateral discounting (configuration xois\_usd)
+\item in-currency OIS discounting (configuration collateral\_inccy)
+\end{itemize}
+all defined in {\tt Examples/Input/todaysmarket.xml}.
+
+\medskip
+The required portfolio files need to be generated from market data and conventions in
+{\tt Examples/Input} and trade templates in 
+{\tt Examples/Example\_26/Helpers}, calling
+
+\medskip
+\centerline{\tt python TradeGenerator.py}
+
+\medskip
+This will place three portfolio files {\tt *\_portfolio.xml} in the input folder.
+Thereafter, the three consistency checks can be run calling
+
+\medskip
+\centerline{\tt python run.py}
+
+\medskip
+Results are in three files {\tt *\_npv.csv} and should show zero NPVs for all benchmark instruments.
+
+%--------------------------------------------------------
+\subsection{BMA Basis Swap}% Example 27
+%--------------------------------------------------------
+
+The example in folder {\tt Examples/Example\_27} demonstrates pricing 
+and sensitivity analysis for a series of USD Libor 3M vs. Averaged BMA (SIFMA) 
+Swaps that correspond to the instruments used to bootstrap the BMA curve. 
+
+The example can be run with
+
+\medskip
+\centerline{\tt python run.py}
+
+\medskip
+and results are in {\tt npv.csv} and {\tt sensitivity.csv}.
+
+%--------------------------------------------------------
+\subsection{Discount Ratio Curves}% Example 28
+%--------------------------------------------------------
+
+The example in folder {\tt Examples/Example\_28} shows how to use a yield curve 
+built from a DiscountRatio segment. 
+In particular, it builds a GBP collateralized in EUR discount curve by referencing 
+three other discount curves:
+\begin{itemize}
+\item a GBP collateralised in USD curve
+\item a EUR collateralised in USD curve
+\item a EUR OIS curve i.e. a EUR collateralised in EUR curve
+\end{itemize}
+
+The implicit assumption in building the curve this way is that EUR/GBP FX 
+forwards collateralised in EUR have the same fair market rate as EUR/GBP 
+FX forwards collateralised in USD. This assumption is illustrated in the 
+example by the NPV of the two forward instruments in the portfolio returning 
+exactly 0 under both discounting regimes i.e. under USD collateralization with 
+direct curve building and under EUR collateralization with the discount ratio 
+modified ``GBP-IN-EUR'' curve.
+
+Also, in this example, an assumption is made that there are no direct GBP/EUR FX 
+forward or cross currency quotes available which in general is false. The example 
+s merely for illustration.
+
+Both collateralizaton scenarios can be run calling {\tt python run.py}.
+
+%--------------------------------------------------------
+\subsection{Curve Building using Fixed vs. Float Cross Currency Helpers}% Example 29
+%--------------------------------------------------------
+
+The example in folder {\tt Examples/Example\_29} demonstrates using fixed vs. float 
+cross currency swap helpers. In particular, it builds a TRY collateralised in USD 
+discount curve using TRY annual fixed vs USD 3M Libor swap quotes.
+
+The portfolio contains an at-market fixed vs. float cross currency swap that is 
+included in the curve building. The NPV of this swap should be zero when the example is run,
+using {\tt python run.py} or ``directly'' calling {\tt ore[.exe] ore.xml}.
 
 \clearpage
 %========================================================
