remove TradeId tag

--- a/Docs/UserGuide/tradedata/intro.tex
+++ b/Docs/UserGuide/tradedata/intro.tex
@@ -52,13 +52,12 @@ A description of all portfolio data, i.e. of each node and XML element in the po
 allowable values follows below. There are two XML elements directly under the top level {\tt Portfolio} node:
 
 \begin{itemize}
-\item {\tt Trade id}: The first element of each trade is the {\tt Trade id} and it is used to identify trades within a
-  portfolio. Trade ids should be unique within a portfolio.  The {\tt
-    Trade id} element is entered as an attribute to the XML element {\tt <Trade>}, such as {\tt <Trade id="ExampleTrade">}
-  in the beginning closed by {\tt </Trade>} at the end of the trade data.
+% \item {\tt Trade id}: The first element of each trade is the {\tt Trade id} and it is used to identify trades within a
+%   portfolio. Trade ids should be unique within a portfolio.  The {\tt
+%     Trade id} element is entered as an attribute to the XML element {\tt <Trade>}, such as {\tt <Trade id="ExampleTrade">}
+%   in the beginning closed by {\tt </Trade>} at the end of the trade data.
 
-Allowable values:  Any alphanumeric string. The underscore (\_) sign may be used as well. 
-
+% Allowable values:  Any alphanumeric string. The underscore (\_) sign may be used as well. 
 
 \item {\tt TradeType}: %The Trade type is set with the {\tt TradeType} element, as well as with the {\tt Type} element in  the envelope. The two Trade type entries should be identical. 
 ORE currently supports 14 trade types.
