fix yy inflation cap/floor coverage

--- a/Docs/UserGuide/userguide.tex
+++ b/Docs/UserGuide/userguide.tex
@@ -223,8 +223,8 @@ CPI Swaps & Y & Y & N & Y \\
 %CPI Caps/Floors & Y & Y & N \\
 %\hline
 Year-on-Year Inflation Swaps & Y & Y & N & Y \\
-\hline
-Year-on-Year Inflation Caps/Floors & Y & Y & N & N\\
+%\hline
+%Year-on-Year Inflation Caps/Floors & Y & Y & N & N\\
 \hline
 Credit Default Swaps & Y & Y & N & N \\
 \hline
@@ -274,7 +274,7 @@ INSTRMENTS
 \begin{itemize}
 \item Commodity Forward and Option, see example \ref{example:24}
 \item Equity Swap, see extended example \ref{ex:equityderivatives}
-\item YoY Inflation Cap/Floor trade builders added
+%\item YoY Inflation Cap/Floor trade builders added
 \item CMS Spread Option (Cap/Floor, Digital Cap/Floor), see example \ref{example:25}
 \end{itemize}
 
@@ -4456,7 +4456,7 @@ Correlation quotes may be loaded directly (by setting QuoteType to Rate) or cali
 %========================================================
 \input{tradedata/intro}
 \input{tradedata/envelope}
-\input{tradedata/tradespcifics}
+\input{tradedata/tradespecifics}
 
 \input{tradedata/swap}
 \input{tradedata/capfloor}
