formula based coupon

--- a/Docs/UserGuide/tradedata/bond.tex
+++ b/Docs/UserGuide/tradedata/bond.tex
@@ -1,4 +1,5 @@
 \subsubsection{Bond}
+\label{ss:bond}
 
 A vanilla Bond is set up using a {\tt BondData} block as shown in listing \ref{lst:bonddata}. The bond specific elements
 are
